add_subdirectory(001-multiples-of-3-or-5)
add_subdirectory(002-even-fibonacci-numbers)
add_subdirectory(003-largest-prime-factor)
add_subdirectory(004-largest-palindrome-product)
add_subdirectory(005-smallest-multiple)
add_subdirectory(006-sum-square-difference)
add_subdirectory(007-10001st-prime)
add_subdirectory(008-largest-product-in-a-series)
